# Colorectal-Cancer-Organoids-Detection

./: .gitignore  LICENSE  README.md  mask.sh  pyproject.toml  train.sbatch  train_aug.sbatch  train_multi_1.sbatch  train_multi_2.sbatch  train_multi_all.sbatch  train_multiorg_A.sbatch  train_multiorg_AB.sbatch  train_multiorg_B.sbatch  train_no_aug.sbatch
config/: evaluate.yaml  example.yaml  fasterRCNN_train_multiorg_A.yaml  fasterRCNN_train_multiorg_AB.yaml  fasterRCNN_train_multiorg_B.yaml  maskRCNN_train.yaml  maskRCNN_train_augm.yaml  maskRCNN_train_multirater_1.yaml  maskRCNN_train_multirater_2.yaml  maskRCNN_train_multirater_all.yaml  maskRCNN_train_no_augm.yaml
docs/: conf.py  index.rst  requirements.txt
example_project/: __init__.py  _say_hello.py  _version.py
model/: README.md
notebooks/: CTG_comparison_dataset.ipynb  calibration_plot.ipynb  comparison_predictions_CTG.ipynb  data_split.ipynb  data_split_2.ipynb  dataset_processing.ipynb  datasplit_multirater.ipynb  deep_ensamble.ipynb  metabolites_split.ipynb  model_evaluation.ipynb  model_vs_annotators.ipynb  multirater_calibration.ipynb  multirater_model_selection.ipynb  split_multiorg.ipynb  split_multiorg.py  test.ipynb  utils.py
src/: annotate_fibroblasts.py  annotate_organoids.py  const.py  correct_organoids.py  merge_annotations.py  review_fibroblasts.py  review_organoids.py  utils.py
src/annotation/: masks_generator.py  napari_launcher.py
src/annotation_tools/: annotate_fibroblasts.py  annotate_organoids.py  correct_organoids.py
src/data_processing/: create_masks.py  merge_annotations.py
src/goat/: dataset.py  engine.py  model.py  utils.py
src/inference/: inference.py
src/model/: dataset.py  engine.py  model.py  objective.py
src/model_training/: evaluate.py  train.py
src/scripts/: annotate_organoids.py  correct_organoids.py  create_masks.py  evaluate.py  inference.py  train.py
src/utils/: annotation_utils.py  const.py  data_utils.py  utils.py
tutorials/: say_hello.ipynb
