[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["example_project"]

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = { file = "README.md" }

[tool.setuptools_scm]
write_to = "example_project/_version.py"

[project]
name = "example-project"
dynamic = ["version"]
#version = "1.0.2"
authors = [
    { name = "Firstname Lastname", email = "firstname.lastname@example.com" },
]
maintainers = [
    { name = "Firstname Lastname", email = "firstname.lastname@example.com" },
]
description = "Example project."
keywords = ["example", "project"]
readme = "README.md"
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]


[project.urls]
documentation = "https://example-project.readthedocs.io/"
repository = "https://github.com/HelmholtzAI-Consultants-Munich/example-project"
