[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
#version = {attr = "my_package.VERSION"}
readme = { file = "README.md" }

[project]
name = "Colorectal-Cancer-Organoids-Detection"
version = "0.0.1"
authors = [
    { name = "Firstname Lastname", email = "firstname.lastname@example.com" },
]
maintainers = [
    { name = "Firstname Lastname", email = "firstname.lastname@example.com" },
]
description = "TODO."
keywords = ["Object-Detection", "Organoids"]
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "napari",
    "PyQt5",
    "numpy<2",
    "pandas",
    "opencv-python",
    "torch",
    "torchvision",
    "albumentations",
    "matplotlib",
    "gdown",
    "torchmetrics",
    "pycocotools",
    "optuna",
    "neptune",
]


[project.urls]
documentation = "https://example-project.readthedocs.io/"
repository = "https://github.com/HelmholtzAI-Consultants-Munich/example-project"

[project.scripts]
annotate_organoids = "src.annotation_tools.annotate_organoids:main"
annotate_fibroblasts = "src.annotation_tools.annotate_fibroblasts:main"
merge_annotations = "src.data_processing.merge_annotations:main"
correct_organoids = "src.annotation_tools.correct_organoids:main"
create_masks = "src.data_processing.create_masks:main"